--- a/public/appreciation_en.json
+++ b/public/appreciation_en.json
@@ -575,8 +575,8 @@
     "officers": [
       "PC 8739 YEUNG Chak-ming"
     ],
-    "unit": "Enforcement and Control Division",
-    "division": "New Territories North Traffic Patrol Sub-unit 1"
+    "unit": "Traffic Patrol Sub-unit 1",
+    "division": "New Territories North Region"
   },
   {
     "date": "2015-05-30",
