--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "start": "webpack-dev-server webpack.config.js --content-base public --watch",
+    "build": "webpack webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Francis Chong <francis@ignition.hk> (https://github.com/siuying)",
   "license": "ISC",
   "dependencies": {
+    "d3": "^3.5.16",
     "feedparser": "^1.1.4",
     "firebase": "^2.4.1",
     "lodash": "^4.6.1",
     "request": "^2.69.0",
     "rxjs-es": "^5.0.0-beta.2"
+  },
+  "devDependencies": {
+    "json-loader": "^0.5.4",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   }
 }
