--- a/public/appreciation_en.json
+++ b/public/appreciation_en.json
@@ -7,8 +7,8 @@
       "Sergeant 1975 YEUNG Ming-ki"
     ],
     "unit": "Platoon 3 Emergency Unit",
-    "division": "New Territories North Region",
-    "region": "NEW TERRITORIES NORTH REGION"
+    "division": "NEW TERRITORIES NORTH",
+    "region": "NEW TERRITORIES NORTH"
   },
   {
     "date": "2016-02-14",
@@ -20,7 +20,7 @@
       "PC 18411 PANG Chun-yin"
     ],
     "unit": "Patrol Sub-unit 2",
-    "division": "Western Division",
+    "division": "WESTERN DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -31,7 +31,7 @@
       "PC 859 CHIN Siu-sun"
     ],
     "unit": "Patrol Sub-unit 3",
-    "division": "Tseung Kwan O Division",
+    "division": "TSEUNG KWAN O DIVISION",
     "region": "KOWLOON EAST"
   },
   {
@@ -43,7 +43,7 @@
       "PC 1681 LUK Tat-hung"
     ],
     "unit": "Lantau Airport Railway",
-    "division": "Railway District",
+    "division": "RAILWAY DISTRICT",
     "region": "OTHERS"
   },
   {
@@ -54,8 +54,8 @@
       "PC 8174 TO Yiu-ting"
     ],
     "unit": "Enforcement and Control Division (Road Work Inspection Team 5), Territories South Road Management Office",
-    "division": "New Territories South Region",
-    "region": "NEW TERRITORIES SOUTH REGION"
+    "division": "NEW TERRITORIES SOUTH",
+    "region": "NEW TERRITORIES SOUTH"
   },
   {
     "date": "2016-02-04",
@@ -67,7 +67,7 @@
       "PC 19288 WONG Hon-hin"
     ],
     "unit": "Patrol Sub-unit 3",
-    "division": "Western Division",
+    "division": "WESTERN DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -79,7 +79,7 @@
       "PC 12125 TANG Kai-him"
     ],
     "unit": "District Investigation Team 7",
-    "division": "Kwun Tong District",
+    "division": "KWUN TONG DISTRICT",
     "region": "KOWLOON EAST"
   },
   {
@@ -90,7 +90,7 @@
       "PC 53928 Yu Wing-ho"
     ],
     "unit": "Patrol Sub-unit 3",
-    "division": "Wan Chai Division",
+    "division": "WAN CHAI DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -102,7 +102,7 @@
       "James"
     ],
     "unit": "District Investigation Team 6",
-    "division": "Sha Tin Division",
+    "division": "SHA TIN DIVISION",
     "region": "NEW TERRITORIES SOUTH"
   },
   {
@@ -114,7 +114,7 @@
       "WPC 14926 CHAN Pui-sin"
     ],
     "unit": "Shenzhen Bay Port",
-    "division": "Tin Shui Wai Division",
+    "division": "TIN SHUI WAI DIVISION",
     "region": "NEW TERRITORIES NORTH"
   },
   {
@@ -125,7 +125,7 @@
       "PC 49977 HO Wai-yip"
     ],
     "unit": "Patrol Sub-unit 3",
-    "division": "Cheung Chau Division",
+    "division": "CHEUNG CHAU DIVISION",
     "region": "MARINE"
   },
   {
@@ -136,7 +136,7 @@
       "PC 15188 NG Ka-fai"
     ],
     "unit": "Patrol Sub-unt 2",
-    "division": "Aberdeen Division",
+    "division": "ABERDEEN DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -149,7 +149,7 @@
       "PC 16206 NG Sui-leung"
     ],
     "unit": "Patrol Sub-unit 4",
-    "division": "Western Division",
+    "division": "WESTERN DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -160,7 +160,7 @@
       "PC 1733 PANG Wai-wa"
     ],
     "unit": "Regional Missing Person Unit",
-    "division": "Kowloon East",
+    "division": "KOWLOON EAST",
     "region": "KOWLOON EAST"
   },
   {
@@ -171,7 +171,7 @@
       "PC 12610 WONG Ho-tak"
     ],
     "unit": "Platoon 3, Emergency Unit",
-    "division": "Hong Kong Island",
+    "division": "HONG KONG ISLAND",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -182,7 +182,7 @@
       "PC 16674 YEUNG Chung-hin"
     ],
     "unit": "Patrol Sub-unit 2",
-    "division": "Wan Chai Division",
+    "division": "WAN CHAI DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -194,7 +194,7 @@
       "PC 34221 Tsai Yu-ping"
     ],
     "unit": "Lantau Airport Railway",
-    "division": "Railway District",
+    "division": "RAILWAY DISTRICT",
     "region": "OTHERS"
   },
   {
@@ -205,7 +205,7 @@
       "PC1582 LAU Yuk-ming"
     ],
     "unit": "District Investigation Team 3",
-    "division": "Kowloon City District",
+    "division": "KOWLOON CITY DISTRICT",
     "region": "KOWLOON WEST"
   },
   {
@@ -216,8 +216,8 @@
       "PC 10181 LAU Hei-yee"
     ],
     "unit": "Accident Investigation Team 6",
-    "division": "Traffic New Territories South Region",
-    "region": "TRAFFIC NEW TERRITORIES SOUTH REGION"
+    "division": "TRAFFIC NEW TERRITORIES SOUTH",
+    "region": "NEW TERRITORIES SOUTH"
   },
   {
     "date": "2015-12-21",
@@ -227,7 +227,7 @@
       "WPC 4168 WONG Pui-pui"
     ],
     "unit": "District Intelligence Section",
-    "division": "Wan Chai District",
+    "division": "WAN CHAI DISTRICT",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -238,7 +238,7 @@
       "PC 473 LI Wai-nok"
     ],
     "unit": "Patrol Sub-unit 2",
-    "division": "Castle Peak Division",
+    "division": "CASTLE PEAK DIVISION",
     "region": "NEW TERRITORIES NORTH"
   },
   {
@@ -251,7 +251,7 @@
       "PC 18332 YIP Kwan-ki"
     ],
     "unit": "Patrol Sub-units of Mong Kok District and PC 16773 KWONG Pui-lam of District Traffic Team",
-    "division": "Mong Kok District",
+    "division": "MONG KOK DISTRICT",
     "region": "KOWLOON WEST"
   },
   {
@@ -262,7 +262,7 @@
       "PC 33222 CHEUNG Yau-hong"
     ],
     "unit": "Patrol Sub-unit 4",
-    "division": "Airport District",
+    "division": "AIRPORT DISTRICT",
     "region": "NEW TERRITORIES SOUTH"
   },
   {
@@ -275,7 +275,7 @@
       "PC 46954 LEUNG Chung-fong"
     ],
     "unit": "Patrol Sub-unit 3",
-    "division": "Lantau South (Mui Wo) Division",
+    "division": "LANTAU SOUTH (MUI WO) DIVISION",
     "region": "NEW TERRITORIES SOUTH"
   },
   {
@@ -286,7 +286,7 @@
       "PCA 6263 TSENG Kin-yung"
     ],
     "unit": "Patrol Sub-unit 2",
-    "division": "Yau Ma Tei Division",
+    "division": "YAU MA TEI DIVISION",
     "region": "KOWLOON WEST"
   },
   {
@@ -299,7 +299,7 @@
       "PC 12509 CHIU Sik-sun"
     ],
     "unit": "District Investigation Team 3",
-    "division": "Wan Chai District",
+    "division": "WAN CHAI DISTRICT",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -313,7 +313,7 @@
       "PC 34287 LEUNG Kwok-wai"
     ],
     "unit": "Patrol Sub-unit 2",
-    "division": "Western Division",
+    "division": "WESTERN DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -324,7 +324,7 @@
       "PC 58199 CHENG Kam-cheung"
     ],
     "unit": "District Investigation Team 2",
-    "division": "Yuen Long District",
+    "division": "YUEN LONG DISTRICT",
     "region": "NEW TERRITORIES NORTH"
   },
   {
@@ -335,7 +335,7 @@
       "PC 48912"
     ],
     "unit": "District Traffic Team",
-    "division": "Central District",
+    "division": "CENTRAL DISTRICT",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -353,7 +353,7 @@
       "PC 7199 TUNG Wun-lan"
     ],
     "unit": "District Investigation Team 3",
-    "division": "Wan Chai District",
+    "division": "WAN CHAI DISTRICT",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -370,7 +370,7 @@
       "PC 10960 YEUNG Kam-lin"
     ],
     "unit": "Patrol Sub-unit 4",
-    "division": "Wan Chai Division",
+    "division": "WAN CHAI DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -383,7 +383,7 @@
       "PC 11611 HUNG Tung-man"
     ],
     "unit": "Counter Terrorism Response Unit",
-    "division": "Counter Terrorism and Internal Security Division",
+    "division": "COUNTER TERRORISM AND INTERNAL SECURITY DIVISION",
     "region": "OTHERS"
   },
   {
@@ -395,7 +395,7 @@
       "52847 WONG Nam-tat"
     ],
     "unit": "Patrol Sub-unit 2",
-    "division": "Airport District",
+    "division": "AIRPORT DISTRICT",
     "region": "NEW TERRITORIES SOUTH"
   },
   {
@@ -406,7 +406,7 @@
       "PC 54345 YUEN Ka-chun"
     ],
     "unit": "Patrol Sub-unit 4",
-    "division": "Happy Valley Division",
+    "division": "HAPPY VALLEY DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -417,7 +417,7 @@
       "PC 33799 CHENG Kwun-wa"
     ],
     "unit": "Patrol Sub-unit 3",
-    "division": "Airport District",
+    "division": "AIRPORT DISTRICT",
     "region": "NEW TERRITORIES SOUTH"
   },
   {
@@ -428,7 +428,7 @@
       "Auxiliary Sergeant 6817 LAU Yip-hung"
     ],
     "unit": "Patrol Sub-unit 3",
-    "division": "Pat Heung Division",
+    "division": "PAT HEUNG DIVISION",
     "region": "NEW TERRITORIES NORTH"
   },
   {
@@ -441,8 +441,8 @@
       "PC 11062 Man Ka-hing"
     ],
     "unit": "Enforcement and Control Division",
-    "division": "Kowloon West Region",
-    "region": "KOWLOON WEST REGION"
+    "division": "KOWLOON WEST",
+    "region": "KOWLOON WEST"
   },
   {
     "date": "2015-10-15",
@@ -452,8 +452,8 @@
       "WPC 10921 CHAN Ho-hing"
     ],
     "unit": "District Investigation Team 3",
-    "division": "Yau Tsim District",
-    "region": "OTHERS"
+    "division": "YAU TSIM DISTRICT",
+    "region": "KOWLOON EAST"
   },
   {
     "date": "2015-10-14",
@@ -465,7 +465,7 @@
       "PC 47537 LEUNG Chi-ming"
     ],
     "unit": "Patrol Sub-unit 2, Wan Chai Division and PC 53089 SIT Man and PC 58904 TAM Kwai-yung of Patrol Sub-unit 1",
-    "division": "Happy Valley Division",
+    "division": "HAPPY VALLEY DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -479,7 +479,7 @@
       "WPC 55653 YAU Yuk-chun"
     ],
     "unit": "Patrol Sub-unit 4",
-    "division": "Peak Sub-Division",
+    "division": "PEAK SUB-DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -491,7 +491,7 @@
       "PC 15883 WONG Ka-ho"
     ],
     "unit": "Patrol Sub-unit 4",
-    "division": "Tsing Yi Division",
+    "division": "TSING YI DIVISION",
     "region": "NEW TERRITORIES SOUTH"
   },
   {
@@ -504,7 +504,7 @@
       "PC 11126 LEUNG Ka-shing"
     ],
     "unit": "Platoon 2, Emergency Unit",
-    "division": "Hong Kong Island",
+    "division": "HONG KONG ISLAND",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -515,8 +515,8 @@
       "PC 34578 LAI Sin-hing"
     ],
     "unit": "Enforcement and Control Division",
-    "division": "Kowloon East Region",
-    "region": "KOWLOON EAST REGION"
+    "division": "KOWLOON EAST",
+    "region": "KOWLOON EAST"
   },
   {
     "date": "2015-08-26",
@@ -526,7 +526,7 @@
       "Auxiliary Station Sergeant CHENG Suk-yin"
     ],
     "unit": "Patrol Sub-unit 3",
-    "division": "North Point Division",
+    "division": "NORTH POINT DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -537,7 +537,7 @@
       "PC 58329 WONG Io-cheong"
     ],
     "unit": "Patrol Sub-unit 4",
-    "division": "Kwai Chung Division",
+    "division": "KWAI CHUNG DIVISION",
     "region": "NEW TERRITORIES SOUTH"
   },
   {
@@ -549,7 +549,7 @@
       "PC 9945 LAW Chi-wai"
     ],
     "unit": "Patrol Sub-unit 4",
-    "division": "Happy Valley Division",
+    "division": "HAPPY VALLEY DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -561,7 +561,7 @@
       "PC 17004 TANG Hoi-san"
     ],
     "unit": "Patrol Sub-unit 2",
-    "division": "Wong Tai Sin District",
+    "division": "WONG TAI SIN DISTRICT",
     "region": "KOWLOON EAST"
   },
   {
@@ -572,8 +572,8 @@
       "PC 34879"
     ],
     "unit": "Investigation and Support, Accident Investigation Team",
-    "division": "New Territories South Region",
-    "region": "NEW TERRITORIES SOUTH REGION"
+    "division": "NEW TERRITORIES SOUTH",
+    "region": "NEW TERRITORIES SOUTH"
   },
   {
     "date": "2015-07-08",
@@ -583,7 +583,7 @@
       "PC 33222 CHEUNG Yau-hong"
     ],
     "unit": "Patrol Sub-unit 4",
-    "division": "Airport District",
+    "division": "AIRPORT DISTRICT",
     "region": "NEW TERRITORIES SOUTH"
   },
   {
@@ -595,7 +595,7 @@
       "PC 17681 TAI Tsz-ho"
     ],
     "unit": "Patrol Sub-unit 4",
-    "division": "North Point Division",
+    "division": "NORTH POINT DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -606,7 +606,7 @@
       "PC 14125 WONG Hon-chiu"
     ],
     "unit": "Patrol Sub-unit 2",
-    "division": "Hung Hom Division",
+    "division": "HUNG HOM DIVISION",
     "region": "KOWLOON WEST"
   },
   {
@@ -617,8 +617,8 @@
       "PC 9060 CHEUNG Lu-yi"
     ],
     "unit": "Traffic Accident Investigation Team 1",
-    "division": "New Territories North Region",
-    "region": "NEW TERRITORIES NORTH REGION"
+    "division": "NEW TERRITORIES NORTH",
+    "region": "NEW TERRITORIES NORTH"
   },
   {
     "date": "2015-06-02",
@@ -628,8 +628,8 @@
       "PC 8739 YEUNG Chak-ming"
     ],
     "unit": "Traffic Patrol Sub-unit 1",
-    "division": "New Territories North Region",
-    "region": "NEW TERRITORIES NORTH REGION"
+    "division": "NEW TERRITORIES NORTH",
+    "region": "NEW TERRITORIES NORTH"
   },
   {
     "date": "2015-05-30",
@@ -639,7 +639,7 @@
       "PC 17043 SHI Yu-shing"
     ],
     "unit": "Patrol Sub-unit 2",
-    "division": "Central District",
+    "division": "CENTRAL DISTRICT",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -652,7 +652,7 @@
       "PC 16502 HO Yim-ching"
     ],
     "unit": "Patrol Sub-unit 1",
-    "division": "Hung Hom Division",
+    "division": "HUNG HOM DIVISION",
     "region": "KOWLOON WEST"
   },
   {
@@ -663,8 +663,8 @@
       "WPC 5550 CHAN Ching-sze"
     ],
     "unit": "Team 1, Traffic Investigation Group",
-    "division": "New Territories North Region",
-    "region": "NEW TERRITORIES NORTH REGION"
+    "division": "NEW TERRITORIES NORTH",
+    "region": "NEW TERRITORIES NORTH"
   },
   {
     "date": "2015-05-22",
@@ -676,7 +676,7 @@
       "PC 16998 LEUNG Wing-hang"
     ],
     "unit": "Patrol Sub-unit 2",
-    "division": "Aberdeen Division",
+    "division": "ABERDEEN DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -687,7 +687,7 @@
       "WPC 8334 HUI Ying"
     ],
     "unit": "Police Service Centre",
-    "division": "Central District",
+    "division": "CENTRAL DISTRICT",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -699,7 +699,7 @@
       "PC 18332 YIP Kwan-ki"
     ],
     "unit": "Patrol Sub-unit 2",
-    "division": "Mong Kok District",
+    "division": "MONG KOK DISTRICT",
     "region": "KOWLOON WEST"
   },
   {
@@ -710,7 +710,7 @@
       "WPC 12348 POON Ka-ying"
     ],
     "unit": "Patrol Sub-unit 3",
-    "division": "Wan Chai Division",
+    "division": "WAN CHAI DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -721,7 +721,7 @@
       "PCA 2817 CHAN Chi-fai"
     ],
     "unit": "Patrol Sub-unit 4",
-    "division": "Tsuen Wan District",
+    "division": "TSUEN WAN DISTRICT",
     "region": "NEW TERRITORIES SOUTH"
   },
   {
@@ -734,7 +734,7 @@
       "PC 17107 FAN Kam-ho"
     ],
     "unit": "Patrol Sub-unit 2 Tsuen Wan District and PC 758 LAU Chi-chung of District Investigation Team 1",
-    "division": "Tsuen Wan District",
+    "division": "TSUEN WAN DISTRICT",
     "region": "NEW TERRITORIES SOUTH"
   },
   {
@@ -746,7 +746,7 @@
       "WPC 18342 CHAN Sim-ling"
     ],
     "unit": "Patrol Sub-unit 2",
-    "division": "Wan Chai Division",
+    "division": "WAN CHAI DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -759,7 +759,7 @@
       "PC 9217 MAN Kin-ho"
     ],
     "unit": "Task Force Sub-unit",
-    "division": "Tseung Kwan O Division",
+    "division": "TSEUNG KWAN O DIVISION",
     "region": "KOWLOON EAST"
   },
   {
@@ -773,7 +773,7 @@
       "Sophia"
     ],
     "unit": null,
-    "division": "Tai Po District",
+    "division": "TAI PO DISTRICT",
     "region": "NEW TERRITORIES NORTH"
   },
   {
@@ -784,7 +784,7 @@
       "Senior Inspector WONG Sze-pan"
     ],
     "unit": "District Investigation Team 5",
-    "division": "Yuen Long District",
+    "division": "YUEN LONG DISTRICT",
     "region": "NEW TERRITORIES NORTH"
   },
   {
@@ -795,8 +795,8 @@
       "WPC 57058 SHUM Wing-chi"
     ],
     "unit": "Team 2, Traffic Investigation Group",
-    "division": "New Territories South Region",
-    "region": "NEW TERRITORIES SOUTH REGION"
+    "division": "NEW TERRITORIES SOUTH",
+    "region": "NEW TERRITORIES SOUTH"
   },
   {
     "date": "2015-02-23",
@@ -806,7 +806,7 @@
       "PC 7371 CHAN Tsun-yin"
     ],
     "unit": "Lantau Airport Line",
-    "division": "Railway District",
+    "division": "RAILWAY DISTRICT",
     "region": "OTHERS"
   },
   {
@@ -817,8 +817,8 @@
       "PC 49759 LEUNG Wai-man"
     ],
     "unit": "Patrol Sub-unit 1, Enforcement and Control Team",
-    "division": "Traffic Hong Kong Island Region",
-    "region": "TRAFFIC HONG KONG ISLAND REGION"
+    "division": "TRAFFIC HONG KONG ISLAND",
+    "region": "HONG KONG ISLAND"
   },
   {
     "date": "2015-02-20",
@@ -829,7 +829,7 @@
       "PC 34286 YAM Chor-tak"
     ],
     "unit": "Patrol Sub-unit 2",
-    "division": "Airport District",
+    "division": "AIRPORT DISTRICT",
     "region": "NEW TERRITORIES SOUTH"
   },
   {
@@ -843,7 +843,7 @@
       "WPC 16791 TSOI Kai-ting"
     ],
     "unit": "Patrol Sub-unit 4",
-    "division": "Happy Valley Division",
+    "division": "HAPPY VALLEY DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -854,7 +854,7 @@
       "PC 50766 LAU Woon-shun"
     ],
     "unit": "Patrol Sub-unit 4",
-    "division": "Airport District",
+    "division": "AIRPORT DISTRICT",
     "region": "NEW TERRITORIES SOUTH"
   },
   {
@@ -865,7 +865,7 @@
       "PC 7556 LAU King-hin"
     ],
     "unit": "Patrol Sub-unit 4",
-    "division": "Yau Ma Tei Division",
+    "division": "YAU MA TEI DIVISION",
     "region": "KOWLOON WEST"
   },
   {
@@ -876,7 +876,7 @@
       "PC 33222 CHEUNG Yau-hong"
     ],
     "unit": "Patrol Sub-unit 4",
-    "division": "Airport District",
+    "division": "AIRPORT DISTRICT",
     "region": "NEW TERRITORIES SOUTH"
   },
   {
@@ -888,7 +888,7 @@
       "SGT 34747 WONG Yan-sang & PC 51948 CHOI Sau-tak"
     ],
     "unit": "DO Team 2",
-    "division": "Cheung Sha Wan Division",
+    "division": "CHEUNG SHA WAN DIVISION",
     "region": "KOWLOON WEST"
   },
   {
@@ -899,7 +899,7 @@
       "Woman Police Constable 56597 YUE King-pui"
     ],
     "unit": "Traffic Investigation and Support Section",
-    "division": "Hong Kong Island",
+    "division": "HONG KONG ISLAND",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -910,7 +910,7 @@
       "Police Constable 5144 LAI Chun-kit"
     ],
     "unit": "Patrol Sub-unit 1",
-    "division": "Kwai Chung Division",
+    "division": "KWAI CHUNG DIVISION",
     "region": "NEW TERRITORIES SOUTH"
   },
   {
@@ -922,7 +922,7 @@
       "Police Constable 15126 TANG Man-kit"
     ],
     "unit": "Patrol Sub-unit 1",
-    "division": "Wan Chai Division",
+    "division": "WAN CHAI DIVISION",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -935,7 +935,7 @@
       "Woman Police Constable 8320 CHAN Ka-yee"
     ],
     "unit": "Platoon 2 of Emergency Unit",
-    "division": "Hong Kong Island",
+    "division": "HONG KONG ISLAND",
     "region": "HONG KONG ISLAND"
   },
   {
@@ -946,7 +946,7 @@
       "Constable 2033 LIU Seung-mo"
     ],
     "unit": "District Investigation Team 5",
-    "division": "Shatin District",
-    "region": "OTHERS"
+    "division": "SHATIN DISTRICT",
+    "region": "NEW TERRITORIES SOUTH"
   }
 ]
